src/test/deca/context/invalid/resultats/test16_void-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test16_void.ass introuvable
